--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DSN = "host=localhost user=postgres password=rapunzel dbname=ecommerce sslmode=disable"
+RAZORPAY_SECRET = "MtKBBcRl8jkG7VzlGI2b3eoj"
+RAZORPAY_ID = "rzp_test_RVrvj4trA4KbI9"
