--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DSN = "host=localhost user=postgres password=rapunzel dbname=ecommerce sslmode=disable"
+DSN = "database-1.c3qmqsymalu6.eu-north-1.rds.amazonaws.com"
 RAZORPAY_SECRET = "MtKBBcRl8jkG7VzlGI2b3eoj"
 RAZORPAY_ID = "rzp_test_RVrvj4trA4KbI9"
